# ENCRYPTR_FW_OTA

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old  test_private_key.pem
ENCRYPTR_FW_OTA-main/: .cproject  .project  README.md  custom_secure_part_ota.csv  my_secure_boot_signing_key.pem  sdkconfig  sdkconfig.old
ENCRYPTR_FW_OTA-main/components/aws-iot/include/: aws_iot_shadow_json.h
ENCRYPTR_FW_OTA-main/main/: CMakeLists.txt  app_main.c  main.h  mqtt.c  ota_task.c  ota_task.h  timed_ota.c  timed_ota.h  wifi_connect.c
cert/: cert-OJFO4AQR4TP6NH4REJ2Y3WPCVLDKMH7R.pem
components/aws-iot/: CMakeLists.txt
components/aws-iot/include/: aws_iot_config.h  aws_iot_log.h  aws_iot_mqtt_client_common_internal.h
components/aws-iot/src/: aws_iot_jobs_interface.c  aws_iot_shadow.c  aws_iot_shadow_records.c
main/: CMakeLists.txt  app_main.c  config_params.h  main.h  ota_task.c  ota_task.h  uart_task.c  uart_task.h  wifi_connect.c
main/certs/: ota_ca_baltimore.crt.pem
